fix(responsive): kill groups 100vw overflow (grid min-width:0, mobile tooltip), modal backdrop + edit-modal polish

--- a/src/app/(room)/[id]/groups/page.module.scss
+++ b/src/app/(room)/[id]/groups/page.module.scss
@@ -180,6 +180,13 @@
 }
 
 .rankingTable {
+  table-layout: fixed;
+  width: 100%;
+
+  td {
+    overflow: hidden;
+  }
+
   thead {
     background: transparent;
   }
