--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -9,19 +9,17 @@
   height: 100dvh;
   display: flex;
   z-index: 999999;
-  overflow: hidden;
   padding: 16px;
   box-sizing: border-box;
 
   &::before {
     content: "";
     background: t.$color-modal-overlay;
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
   }
 
   .modal {
